[gd_scene load_steps=9 format=3 uid="uid://b8fary14ruxi0"]

[ext_resource type="Script" uid="uid://c7rs81rjl7k0a" path="res://mini_games/slots/objects/items.gd" id="1_41scq"]
[ext_resource type="Texture2D" uid="uid://7wih3oxtw4oh" path="res://assets/dice/dice-six-faces-one.png" id="2_agwef"]
[ext_resource type="Texture2D" uid="uid://bbwcqg2y0400v" path="res://assets/dice/dice-six-faces-two.png" id="3_2fjh4"]
[ext_resource type="Texture2D" uid="uid://i35rs6kj8ig6" path="res://assets/dice/dice-six-faces-three.png" id="4_n614j"]
[ext_resource type="Texture2D" uid="uid://dqh08rg8bdu36" path="res://assets/dice/dice-six-faces-four.png" id="5_wc14x"]
[ext_resource type="Texture2D" uid="uid://drerlpy511lip" path="res://assets/dice/dice-six-faces-five.png" id="6_1suj1"]
[ext_resource type="Texture2D" uid="uid://cy2a1ddhbtejp" path="res://assets/dice/dice-six-faces-six.png" id="7_qm0tw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fwudy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_agwef")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2fjh4")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_n614j")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_wc14x")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_1suj1")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qm0tw")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[node name="Items" type="Node2D"]
script = ExtResource("1_41scq")

[node name="Item1" type="AnimatedSprite2D" parent="."]
position = Vector2(137.512, 226.386)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_fwudy")
animation = &"1"

[node name="Item2" type="AnimatedSprite2D" parent="."]
position = Vector2(348, 226)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_fwudy")
animation = &"6"
frame_progress = 0.800906

[node name="Item3" type="AnimatedSprite2D" parent="."]
position = Vector2(555, 226)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_fwudy")
animation = &"6"
